# sound-juicer

./: .bzrignore  .cvsignore  .gitattributes  .gitlab-ci.yml  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  NOTES  README  README.md  TODO  autogen.sh  configure.ac  configure.in  doap.rdf.in  git.mk  meson.build  meson_options.txt  sound-juicer.doap  sound-juicer.spec.in  xmldocs.make
build-aux/: 0001-libxml-constify-the-storage-of-xmlGetLastError.patch  git.mk  org.gnome.SoundJuicer.json  release.mk
data/: .cvsignore  Makefile.am  logo.xcf  meson.build  org.gnome.SoundJuicer.desktop.in.in  org.gnome.SoundJuicer.service.in  org.gnome.sound-juicer.gschema.xml  rhythmbox.gep  sj-album-chooser-dialog.ui  sound-juicer-menu.ui  sound-juicer-shortcuts.ui  sound-juicer.1  sound-juicer.convert  sound-juicer.desktop.in  sound-juicer.desktop.in.in  sound-juicer.glade  sound-juicer.gresource.xml  sound-juicer.schemas.in  sound-juicer.ui
data/appdata/: sound-juicer.appdata.xml.in
data/metainfo/: org.gnome.SoundJuicer.metainfo.xml.in
help/: LINGUAS  Makefile.am  meson.build
help/ar/: ar.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/ja/: ja.po
help/kk/: kk.po
help/nl/: nl.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sound-juicer/: ChangeLog  Makefile.am
help/sound-juicer/C/: Makefile.am  sound-juicer-manual-C.omf  sound-juicer.xml
help/sound-juicer/ar/: ar.po
help/sound-juicer/ca/: ca.po
help/sound-juicer/cs/: cs.po
help/sound-juicer/de/: de.po
help/sound-juicer/el/: el.po
help/sound-juicer/en_GB/: en_GB.po
help/sound-juicer/es/: .cvsignore  es.po
help/sound-juicer/eu/: eu.po
help/sound-juicer/fr/: fr.po
help/sound-juicer/ja/: ja.po
help/sound-juicer/nl/: .cvsignore  nl.po
help/sound-juicer/oc/: oc.po
help/sound-juicer/pl/: pl.po
help/sound-juicer/pt_BR/: pt_BR.po
help/sound-juicer/ru/: ru.po
help/sound-juicer/sl/: sl.po
help/sound-juicer/sv/: sv.po
help/sound-juicer/uk/: uk.po
help/sound-juicer/zh_CN/: zh_CN.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
libjuicer/: Makefile.am  libsj.h  meson.build  rb-gst-media-types.c  rb-gst-media-types.h  sj-error.c  sj-error.h  sj-extractor.c  sj-extractor.h  sj-libdiscid.h  sj-metadata-cdtext.c  sj-metadata-cdtext.h  sj-metadata-getter.c  sj-metadata-getter.h  sj-metadata-gvfs.c  sj-metadata-musicbrainz.c  sj-metadata-musicbrainz3.c  sj-metadata-musicbrainz3.h  sj-metadata-musicbrainz4.c  sj-metadata-musicbrainz5.c  sj-metadata-musicbrainz5.h  sj-metadata.c  sj-metadata.h  sj-structures.c  sj-structures.h  sj-util.c  sj-util.h
po/: .cvsignore  ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  Rules-remove-icon-name  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  es_ES.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+59 more)
src/: .cvsignore  Makefile.am  bacon-cd-selection.c  bacon-cd-selection.h  bacon-volume.c  bacon-volume.h  cd-drive.c  cd-drive.h  dvd_plus_rw_utils.cpp  egg-play-preview.c  egg-play-preview.h  gconf-bridge.c  gconf-bridge.h  gedit-message-area.c  gedit-message-area.h  gsttaglib.cc  gsttaglib.h  meson.build  sj-about.c  sj-about.h  sj-album-chooser-dialog.c  sj-album-chooser-dialog.h  sj-cell-renderer-text.c  sj-cell-renderer-text.h  sj-drive-manager.c  sj-drive-manager.h  sj-error.c  sj-error.h  sj-extracting.c  sj-extracting.h  sj-extractor.c  sj-extractor.h  sj-genres.c  sj-genres.h  sj-gstreamer-fake.c  sj-gstreamer.c  sj-gstreamer.h  sj-inhibit.c  sj-inhibit.h  sj-main.c  (+28 more)
tests/: .cvsignore  Makefile.am  data-test.c  glade-test.c  gst-test.c  mb-test.c  meson.build  prefs-test.c  prefs-test.h
trunk/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  TODO  autogen.sh  configure.in  sound-juicer.spec.in
trunk/data/: sound-juicer-32.xcf
trunk/help/sound-juicer/: ChangeLog  sound-juicer.omf.in
trunk/help/sound-juicer/C/: sound-juicer.xml
trunk/help/sound-juicer/el/: el.po
trunk/help/sound-juicer/en_GB/: en_GB.po
trunk/help/sound-juicer/fr/: fr.po
trunk/help/sound-juicer/oc/: oc.po
trunk/help/sound-juicer/pl/: pl.po
trunk/help/sound-juicer/uk/: uk.po
trunk/libjuicer/: .cvsignore  dummy.cpp  sj-extractor.h  sj-metadata.h  sj-util.c
trunk/po/: .cvsignore  ChangeLog  POTFILES.skip  ar.po  as.po  be.po  be@latin.po  bn.po  bn_IN.po  br.po  ca.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  et.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  ka.po  ko.po  ku.po  lt.po  ml.po  mn.po  mr.po  ms.po  nl.po  nn.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+7 more)
trunk/src/: gsttaglib.cc  gsttaglib.h  sj-about.c  sj-about.h  sj-genres.c  sj-inhibit.c  sj-inhibit.h  sj-main.c  update-from-bacon.sh
trunk/tests/: .cvsignore  Makefile.am  mb-test.c
