sources = [
	'rb-gst-media-types.c',
	'sj-error.c',
	'sj-extractor.c',
	'sj-metadata.c',
	'sj-metadata-getter.c',
	'sj-metadata-gvfs.c',
	'sj-metadata-musicbrainz5.c',
	'sj-structures.c',
	'sj-util.c',
]

libjuicer = static_library(
	'libjuicer',
	sources,
	include_directories: top_inc,
	dependencies: deps
)
