bin_PROGRAMS += sound-juicer

sound_juicer_SOURCES += \
	src/egg-play-preview.c \
	src/egg-play-preview.h \
	src/sj-about.c \
	src/sj-about.h \
	src/sj-cell-renderer-text.c \
	src/sj-cell-renderer-text.h \
	src/sj-extracting.c \
	src/sj-extracting.h \
	src/sj-genres.c \
	src/sj-genres.h \
	src/sj-main.c \
	src/sj-main.h \
	src/sj-play.c \
	src/sj-play.h \
	src/sj-prefs.c \
	src/sj-prefs.h \
	src/sj-tree-view.c \
	src/sj-tree-view.h \
	src/sj-window-state.c \
	src/sj-window-state.h \
	src/sound-juicer.h
